--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Shubham Raj - Portfolia</title>
+  <title>Shubham Raj - Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -92,8 +92,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 feb 2003</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Bhagalpur, Bihar</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 Feb 2003</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bhagalpur, Bihar</li>
                 </ul>
               </div>
               <div class="col-lg-6">
